# reinforce-and-render

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  GPU_TRAINING_GUIDE.md  LICENSE  README.md  README_CI_CD.md  README_RL.md  azure_setup_instructions.md  check_torch.py  collision_data.json  config.json  config_manager.py  d  dev-requirements.txt  diagnose_imports.py  docker-compose.yml  enemy_ai_model.pth  environment-cpu.yml  environment-gpu.yml  generate_sprites.py  main.py  missile_model.pth  mypy.ini  nx.json  project_restructure.py  pyproject.toml  pytest.ini  requirements.txt  run-game.bat  run-pgz-demo.bat  run_game.bat  run_game_local.bat  run_game_refactored.bat  run_gpu_training.py  run_tests.bat  run_tests.sh  (+9 more)
.github/workflows/: azure-deploy.yml  build.yml  ci.yml  main.yml
ai_model/: model.py  train.py  train_ai_model.py
ai_model/ai_model/saved_models/: enemy_ai_model.pth
ai_model/model_definition/: model.py
ai_model/saved_models/: enemy_ai_model.pth
ai_platform_trainer/: __main__.py  main.py
ai_platform_trainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ai_platform_trainer/agents/: env.py  nn_agent.py  training_loop.py  vec_env.py
ai_platform_trainer/ai/models/: simple_missile_model.py
ai_platform_trainer/ai/training/: missile_dataset.py  train_enemy_rl.py  train_missile_model.py
ai_platform_trainer/ai/visualization/: training_monitor.py
ai_platform_trainer/ai_model/: enemy_rl_agent.py  missile_dataset.py  simple_missile_model.py  train_ai_model.py  train_enemy_rl.py  train_missile_model.py  training_monitor.py
ai_platform_trainer/ai_model/model_definition/: enemy_movement_model.py  missile_model.py  model.py  simple_model.py
ai_platform_trainer/core/: adapter.py  color_manager.py  config_manager.py  data_logger.py  interfaces.py  launcher.py  launcher_di.py  launcher_refactored.py  logging_config.py  service_locator.py  utils.py
ai_platform_trainer/cpp/: CMakeLists.txt  GPU_ACCELERATION.md  GPU_IMPLEMENTATION_REPORT.md  README.md  README_BUILD.md  SETUP_GUIDE.md  __init__.py  detect_gpu_arch.py  find_cmake.py  locate_pybind11.py  physics_cuda_benchmark.py  setup.py  setup_environment.py  simple_cuda_test.py  verify_cuda.py  verify_gpu_training.py
ai_platform_trainer/cpp/include/: __init__.py  entity.h  environment.h  physics.h
ai_platform_trainer/cpp/pybind/: __init__.py
ai_platform_trainer/cpp/src/: __init__.py  environment.cpp  physics.cu  physics_cpu.cpp
ai_platform_trainer/engine/: display_manager.py  game.py  input_handler.py  menu.py  physics.py  renderer.py
ai_platform_trainer/engine/core/: game.py  game_di.py  game_refactored.py  launcher.py  launcher_di.py  logging_config.py  service_locator.py  unified_launcher.py
ai_platform_trainer/engine/entities/: enemy.py  entity.py  entity_factory.py  missile.py  player.py
ai_platform_trainer/engine/gameplay/: __init__.py  config.py  difficulty_manager.py  spawn_utils.py
ai_platform_trainer/engine/input/: input_handler.py
ai_platform_trainer/engine/physics/: collisions.py  spawner.py
ai_platform_trainer/engine/rendering/: background.py  menu.py  renderer.py
ai_platform_trainer/entities/: enemy.py  enemy_play.py  enemy_training.py  entity_factory.py  missile.py  player.py  player_play.py  player_training.py
ai_platform_trainer/entities/behaviors/: enemy_ai_controller.py  missile_ai_controller.py
ai_platform_trainer/entities/components/: enemy_play.py  enemy_training.py  enemy_variants.py  missile.py  obstacle.py  player_play.py  player_training.py  power_up.py  power_up_manager.py
ai_platform_trainer/gameplay/: collisions.py  common_utils.py  config.py  display_manager.py  game.py  game_di.py  game_refactored.py  input_handler.py  menu.py  missile_ai_controller.py  post_training_processor.py  renderer.py  renderer_di.py  spawn_utils.py  spawner.py  state_machine.py  training_manager.py  utils.py
ai_platform_trainer/supervised/: supervised_demo.py
ai_platform_trainer/utils/: common_utils.py  data_validator_and_trainer.py  entity_utils.py  helpers.py  sprite_manager.py  test_sprite_rendering.py
backup/gameplay/: difficulty_manager.py  menu.py  renderer_di.py  spawn_utils.py
backups/launchers/: core_launcher_refactored.py
core/: config.py  data_logger.py  db_connection.py  db_setup.py  game.py  utils.py
data/: collision_data.json  training_data.json
data/raw/: collision_data.json  training_data.json
demos/pgz_demo/: game_zero.py
deployment/docker/: Dockerfile  docker-compose.yml
docs/: launcher_system.md  phase1_cleanup_summary.md  refactoring_next_steps.md  testing_guide.md
docs/design/: project_structure.md
entities/: enemy.py  player.py
gameplay/: data_manager.py  game.py  game_manager.py  main.py  menu.py  renderer.py  training_manager.py
models/: enemy_ai_model.pth  missile_model.pth
reports/analysis/: architecture-overview.md  code-audit-report.md  dead-code-report.txt  pylint-report.txt  technical-debt.md
reports/diagrams/: module-relationships.md
reports/metrics/: complexity-report.txt  maintainability-report.txt
saved_models/: enemy_ai_model.pth
scripts/: fetch_assets.py  launch_train.py  migrate_codebase.py  test_env.py  test_net.py  test_vec_env.py
scripts/tools/: fix_linting.py
src/: main.py
src/ai_model/: train_ai_model.py
src/ai_platform_trainer/: __init__.py  main.py
src/ai_platform_trainer/physics/cpp/: CMakeLists.txt  README_BUILD.md  SETUP_GUIDE.md  build.bat  check_cuda.py  gpu_environment.py  setup_environment.py  train_missile_avoidance.py  verify_cuda.py  verify_gpu_training.py
src/ai_platform_trainer/physics/cpp/include/: physics.h
src/ai_platform_trainer/physics/cpp/pybind/: bindings.cpp
src/ai_platform_trainer/physics/cpp/src/: entity.cpp  physics.cu  reward.cpp
src/core/: data_logger.py  db_connection.py  utils.py
src/entities/: enemy.py
src/gameplay/: data_manager.py  game.py  menu.py
tests/: README.md  conftest.py
tests/integration/: test_game_mechanics.py  test_training_pipeline.py
(+49 files in other folders)
